force-app/main/default/objects/CS_Order__c/CS_Order__c.object-meta.xml
<CustomObject>
    <label>Support Forums Order</label>
    <nameField>
        <displayFormat>O-{00000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Forums Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>