force-app/main/default/objects/CS_Order__c/fields/Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date__c</fullName>
    <description>Date and time the order was cancelled by the customer or Rubrik Forums Team</description>
    <inlineHelpText>Date and time the order was cancelled by the customer or Rubrik Forums Team</inlineHelpText>
    <label>Cancellation Date</label>
    <type>DateTime</type>
</CustomField>