force-app/main/default/objects/CS_Order__c/fields/Catalog_Item__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Item__c</fullName>
    <label>Catalog Item</label>
    <referenceTo>Catalog__c</referenceTo>
    <relationshipName>Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>