force-app/main/default/objects/CS_Order__c/fields/Coins_After_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Coins_After_Transaction__c</fullName>
    <description>This field stores the number of coins a customer has after placing the order</description>
    <inlineHelpText>Number of coins a customer has after placing the order</inlineHelpText>
    <label>Coins After Transaction</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>