force-app/main/default/objects/CS_Order__c/fields/Coins_Before_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Coins_Before_Transaction__c</fullName>
    <description>This field store the number of coins a customer had before placing the order</description>
    <inlineHelpText>Number of coins a customer had before placing the order</inlineHelpText>
    <label>Coins Before Transaction</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>