force-app/main/default/objects/CS_Order__c/fields/Delivered_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivered_Date__c</fullName>
    <description>Date and time the order was delivered to the customer</description>
    <inlineHelpText>Date and time the order was delivered to the customer</inlineHelpText>
    <label>Delivered Date</label>
    <type>DateTime</type>
</CustomField>