force-app/main/default/objects/CS_Order__c/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <formula>Catalog_Item__r.Name__c</formula>
    <label>Item Name</label>
    <type>Text</type>
</CustomField>