force-app/main/default/objects/CS_Order__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <label>Phone Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>