force-app/main/default/objects/CS_Order__c/fields/Placed_Date__c.field-meta.xml
<CustomField>
    <fullName>Placed_Date__c</fullName>
    <description>Date and time when the order was placed by Rubrik Forums Team</description>
    <inlineHelpText>Date and time when the order was placed by Rubrik Forums Team</inlineHelpText>
    <label>Placed Date</label>
    <type>DateTime</type>
</CustomField>