force-app/main/default/objects/CS_Order__c/fields/Shipped_Date__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Date__c</fullName>
    <description>Date and time when the order was shipped</description>
    <inlineHelpText>Date and time when the order was shipped</inlineHelpText>
    <label>Shipped Date</label>
    <type>DateTime</type>
</CustomField>