force-app/main/default/objects/CS_Order__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <description>Date and time the order was placed by the customer</description>
    <inlineHelpText>Date and time the order was placed by the customer</inlineHelpText>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>