force-app/main/default/objects/CS_Order__c/validationRules/MandatoryEstDeliveryDateWhenOrderPlaced.validationRule-meta.xml
<ValidationRule>
    <fullName>MandatoryEstDeliveryDateWhenOrderPlaced</fullName>
    <active>true</active>
    <description>Estimated delivery date is required when order status is changed to Placed or shipped</description>
    <errorConditionFormula>AND(
 TEXT(PRIORVALUE(Status__c)) = &apos;New&apos;,
 ISNULL(Estimated_Delivery_Date__c),
 OR(
  TEXT(Status__c) = &apos;Placed&apos;,
  TEXT(Status__c) = &apos;Shipped&apos;
 )
)</errorConditionFormula>
    <errorDisplayField>Estimated_Delivery_Date__c</errorDisplayField>
    <errorMessage>Estimated Delivery Date is required when order is placed or shipped</errorMessage>
</ValidationRule>