force-app/main/default/objects/CS_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Catalog_Item__c</columns>
    <columns>Item_Name__c</columns>
    <columns>Full_Name__c</columns>
    <columns>User__c</columns>
    <columns>Placed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>