force-app/main/default/objects/CS_Order__c/listViews/Shipped_Orders.listView-meta.xml
<ListView>
    <fullName>Shipped_Orders</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Catalog_Item__c</columns>
    <columns>Item_Name__c</columns>
    <columns>Shipped_Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Full_Name__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Shipped,Cancelled</value>
    </filters>
    <label>Shipped Orders</label>
</ListView>